fixed the bugs of styles on smaller screen sizes

--- a/messanger-app/src/components/Home/Home.scss
+++ b/messanger-app/src/components/Home/Home.scss
@@ -1,5 +1,5 @@
 @mixin mobile{
-    @media screen and (max-width:550px) {
+    @media screen and (max-width:600px) {
         @content
     }
 };
@@ -183,11 +183,13 @@
         .chatContainer{
             flex: 2;
             border-right: 1px solid lightgray;
+            height: 80%;
             @include desktop{
                 flex: 4;
             }
             @include mobile{
                 flex: 6;
+                height: 60%;
             }
             .chatInfo{
                 background-color: #eee;
@@ -240,9 +242,12 @@
                 }
             }
             .messagesContainer{
-                height: calc(100% - 116px);
+                height: 100%;
                 margin: 1rem;
                 overflow: scroll;
+                @include desktop{
+                    height: 75%;
+                }
                 .message{
                     display: flex;
                     align-items: center;
